--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="script.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GUI Program</title>
@@ -16,30 +17,5 @@
   <div id="adi"></div>
   <div id="his"></div>
 
-  <script>
-    function fetchData() {
-  fetch('http://localhost:3001/data')
-    .then(response => response.json())
-    .then(data => updateValues(data))
-    .catch(error => console.error(error));
-}
-
-function updateValues(data) {
-  const altitudeElement = document.getElementById('altitude');
-  const adiElement = document.getElementById('adi');
-  const hisElement = document.getElementById("his");
-
-  altitudeElement.textContent = `Altitude: ${data.altitude}`;
-  adiElement.textContent = `ADI: ${data.adi}`;
-  hisElement.textContent = `HIS: ${data.his}`;
-
-
-  // Fetch data again after 2 seconds
-  setTimeout(fetchData, 2000);
-}
-
-// Fetch initial data
-fetchData();
-  </script>
 </body>
 </html>
